[project]
name = "vehicle_analyst_backend"
version = "0.1.0"
description = "vehicle_analyst_backend using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
vehicle_analyst_backend = "vehicle_analyst_backend.main:run"
run_crew = "vehicle_analyst_backend.main:run"
train = "vehicle_analyst_backend.main:train"
replay = "vehicle_analyst_backend.main:replay"
test = "vehicle_analyst_backend.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
